johnlimadev/force-app/main/default/objects/Prova__c/Prova__c.object-meta.xml
<CustomObject>
    <description>Prova de Auto-escola</description>
    <label>Prova</label>
    <nameField>
        <displayFormat>P{000}</displayFormat>
        <label>Número da Prova</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>