johnlimadev/force-app/main/default/objects/Prova__c/fields/Aluno__c.field-meta.xml
<CustomField>
    <fullName>Aluno__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aluno</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provas (Aluno)</relationshipLabel>
    <relationshipName>Provas1</relationshipName>
    <type>Lookup</type>
</CustomField>