johnlimadev/force-app/main/default/objects/Prova__c/fields/Auto_escola__c.field-meta.xml
<CustomField>
    <fullName>Auto_escola__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Auto-escola</description>
    <label>Auto-escola</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provas</relationshipLabel>
    <relationshipName>Provas</relationshipName>
    <type>Lookup</type>
</CustomField>