johnlimadev/force-app/main/default/objects/Prova__c/fields/Veiculo__c.field-meta.xml
<CustomField>
    <fullName>Veiculo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Veículo</label>
    <referenceTo>Veiculo__c</referenceTo>
    <relationshipLabel>Provas</relationshipLabel>
    <relationshipName>Provas</relationshipName>
    <type>Lookup</type>
</CustomField>